@@ -9,5 +9,7 @@ xfce/microlinux-wallpapers
 x/eurostile-fonts
 x/google-droid-fonts
 x/webcore-fonts
+xap/mozilla-firefox-langpack
+xap/mozilla-thunderbird-langpack
 
 
