@@ -1,0 +1,3 @@
+// This forces Firefox language to switch to locale of machine
+// // if available.
+pref("intl.locale.matchOS", true);
