@@ -1,0 +1,12 @@
+                        |-----handy-ruler------------------------------------------------------|
+mozilla-firefox-langpack: mozilla-firefox-langpack (Firefox translations)
+mozilla-firefox-langpack:
+mozilla-firefox-langpack: Language files for Mozilla Firefox ESR.
+mozilla-firefox-langpack: 
+mozilla-firefox-langpack: 
+mozilla-firefox-langpack: 
+mozilla-firefox-langpack: 
+mozilla-firefox-langpack:
+mozilla-firefox-langpack: 
+mozilla-firefox-langpack:
+mozilla-firefox-langpack: Package created by Niki Kovacs <info@microlinux.fr>
