@@ -1,0 +1,12 @@
+                            |-----handy-ruler------------------------------------------------------|
+mozilla-thunderbird-langpack: mozilla-thunderbird-langpack (Thunderbird translations)
+mozilla-thunderbird-langpack:
+mozilla-thunderbird-langpack: Language files for Mozilla Thunderbird.
+mozilla-thunderbird-langpack: 
+mozilla-thunderbird-langpack: 
+mozilla-thunderbird-langpack: 
+mozilla-thunderbird-langpack: 
+mozilla-thunderbird-langpack:
+mozilla-thunderbird-langpack: 
+mozilla-thunderbird-langpack:
+mozilla-thunderbird-langpack: Package created by Niki Kovacs (http://www.microlinux.fr)
