@@ -1,3 +1,7 @@
+Thu Dec 18 09:25:13 CET 2014
+xap/mozilla-firefox-langpack-31.3.0-i486-1_microlinux.txz: Added.
+xap/mozilla-thunderbird-langpack-31.3.0-i486-1_microlinux.txz: Added.
++--------------------------+
 Wed Dec 17 10:48:25 CET 2014
 profile/user-settings-console-1.0-noarch-1_microlinux.txz: Added.
 xfce/aero-1.0-noarch-1_microlinux.txz: Added.
